--- a/Presentation/Views/Tickets/Book.cshtml
+++ b/Presentation/Views/Tickets/Book.cshtml
@@ -6,19 +6,18 @@
 
 <h1>Book</h1>
 
-<h4>Book the Flight</h4>
+<h4>BookFlightViewModel</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Book">
+        <form asp-action="Book" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            
+
             <div class="form-group">
                 <label asp-for="Row" class="control-label"></label>
                 <input asp-for="Row" class="form-control" />
                 <span asp-validation-for="Row" class="text-danger"></span>
             </div>
-
             <div class="form-group">
                 <label asp-for="Column" class="control-label"></label>
                 <input asp-for="Column" class="form-control" />
@@ -32,9 +31,17 @@
             </div>
 
             <div class="form-group">
-                <input type="submit" value="Book" class="btn btn-primary" />
+                <label for="imageUpload" class="control-label">Upload Image</label>
+                <input type="file" class="form-control-file" id="imageUpload" name="PassportImgFile">
+                <span asp-validation-for="PassportImgFile" class="text-danger"></span>
             </div>
 
+
+
+
+            <div class="form-group">
+                <input type="submit" value="Create" class="btn btn-primary" />
+            </div>
         </form>
     </div>
 </div>
