added AdminController, list of flights and list of tickets for that flight, and details for a specific ticket showing the passport img

--- a/Presentation/Views/Home/Index.cshtml
+++ b/Presentation/Views/Home/Index.cshtml
@@ -4,5 +4,6 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h4>Your Next Adventure Awaits!</h4>
+    <a asp-controller="Tickets" asp-action="Index" class="btn btn-link text-dark">Book a flight!</a>
 </div>
