--- a/Presentation/Views/Admin/TicketDetails.cshtml
+++ b/Presentation/Views/Admin/TicketDetails.cshtml
@@ -16,6 +16,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Id)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Cancelled) 
+        </dt>
+        <dd class="col-sm-10">
+            @(Model.Cancelled ? "Yes" : "No")
+        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Row)
         </dt>
