--- a/Presentation/Views/Tickets/Book.cshtml
+++ b/Presentation/Views/Tickets/Book.cshtml
@@ -5,24 +5,37 @@
 }
 
 <h1>Book</h1>
-
-<h4>BookFlightViewModel</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Book" enctype="multipart/form-data">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+<form asp-action="Book" enctype="multipart/form-data">
+    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+    <div class="row">
+    
+        <div class="col-md-6">
+            <div class="seat-grid">
+                @for (int i = 0; i < Model.Row; i++)
+                {
+                    <div class="seat-row">
+                        @for (int j = 0; j < Model.Column; j++)
+                        {
+                            string seatId = $"{i},{j}";
+                            bool isTaken = Model.IsSeatTaken(i, j);
+                            <label class="seat @(isTaken ? "seat-unavailable" : "")">
+                                <input type="radio" value="@seatId" name="SelectedSeat" @(isTaken ? "disabled" : "") title="@(isTaken ? "Unavailable" : "Available")" />
+                                <img src="/images/seat.png" alt="@(isTaken ? "Unavailable Seat" : "Available Seat")" />
+                            </label>
+                        }
+                    </div>
+                }
+            </div>
+        </div>
 
+        <div class="col-md-6">
+           
             <div class="form-group">
-                <label asp-for="Row" class="control-label"></label>
-                <input asp-for="Row" class="form-control" />
-                <span asp-validation-for="Row" class="text-danger"></span>
+                <label class="control-label"></label>
+                <input value="@($"{Model.PricePaid:C}")" class="form-control" disabled />
             </div>
-            <div class="form-group">
-                <label asp-for="Column" class="control-label"></label>
-                <input asp-for="Column" class="form-control" />
-                <span asp-validation-for="Column" class="text-danger"></span>
-            </div>
+
 
             <div class="form-group">
                 <label asp-for="Passport" class="control-label"></label>
@@ -30,23 +43,19 @@
                 <span asp-validation-for="Passport" class="text-danger"></span>
             </div>
 
+
             <div class="form-group">
-                <label for="imageUpload" class="control-label">Upload Image</label>
-                <input type="file" class="form-control-file" id="imageUpload" name="PassportImgFile">
+                <label for="imageUpload" class="control-label form-label">Upload Image</label>
+                <input type="file" class="form-control-file form-control" id="imageUpload" name="PassportImgFile">
                 <span asp-validation-for="PassportImgFile" class="text-danger"></span>
             </div>
-
-
-
-
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="form-group mt-2">
+                <input type="submit" value="Book" class="btn btn-primary" />
             </div>
-        </form>
+        </div>
     </div>
-</div>
+</form>
 
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
-
