--- a/Presentation/Views/Tickets/Index.cshtml
+++ b/Presentation/Views/Tickets/Index.cshtml
@@ -72,15 +72,13 @@
                 @Html.DisplayFor(modelItem => item.RetailPrice)
             </td>
             <td>
-                @* @Html.DisplayFor(modelItem => item.IsFullyBooked) *@
                     @(item.IsFullyBooked ? "Yes" : "No")
             </td>
              <td>
-               @*  @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ }) *@
-
-                @Html.ActionLink("Book", "Book", new { id = item.Id })
+                    @if (!item.IsFullyBooked)
+                    {
+                        @Html.ActionLink("Book", "Book", new { id = item.Id })
+                    }
             </td> 
         </tr>
 }
