--- a/Presentation/wwwroot/css/site.css
+++ b/Presentation/wwwroot/css/site.css
@@ -16,3 +16,45 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+
+
+
+
+.seat-grid {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.seat-row {
+    display: flex;
+}
+
+.seat {
+    margin: 5px;
+    position: relative;
+    display: inline-block; 
+}
+
+.seat input[type="radio"] {
+    opacity: 0;
+    position: absolute;
+    width: 100%; 
+    height: 100%;
+}
+
+.seat img {
+    display: block;
+    cursor: pointer;
+    width: 20px;
+}
+
+
+.seat input[type="radio"]:checked + img {
+    outline: 2px solid blue;
+}
+
+.seat-unavailable {
+    background-color: red;
+}
