--- a/Presentation/Views/Tickets/Book.cshtml
+++ b/Presentation/Views/Tickets/Book.cshtml
@@ -32,14 +32,14 @@
         <div class="col-md-6">
            
             <div class="form-group">
-                <label class="control-label"></label>
+                <label class="control-label">Price</label>
                 <input value="@($"{Model.PricePaid:C}")" class="form-control" disabled />
             </div>
 
 
             <div class="form-group">
                 <label asp-for="Passport" class="control-label"></label>
-                <input asp-for="Passport" class="form-control" />
+                <input asp-for="Passport" class="form-control" value="@(Model.Passport)" />
                 <span asp-validation-for="Passport" class="text-danger"></span>
             </div>
 
